--- a/Source/AI/AI.csproj
+++ b/Source/AI/AI.csproj
@@ -41,6 +41,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbPruningAi.cs" />
     <Compile Include="MinmaxSearchAi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scorer\CenterScorer.cs" />
