--- a/Source/GobangGameLib/GobangGameLib.csproj
+++ b/Source/GobangGameLib/GobangGameLib.csproj
@@ -57,21 +57,23 @@
     <Compile Include="GameBoard\PositionManagement\Line.cs" />
     <Compile Include="GameBoard\PositionManagement\LineGroup.cs" />
     <Compile Include="GameBoard\PositionManagement\LineType.cs" />
+    <Compile Include="GameBoard\PositionManagement\PositionFactory.cs" />
     <Compile Include="GameBoard\PositionManagement\PositionManager.cs" />
+    <Compile Include="GameBoard\PieceType.cs" />
     <Compile Include="Game\GameFactory.cs" />
     <Compile Include="Game\GameStatus.cs" />
     <Compile Include="Game\GobangGame.cs" />
     <Compile Include="Game\IGame.cs" />
-    <Compile Include="GameBoard\PieceType.cs" />
     <Compile Include="GameJudge\IJudge.cs" />
-    <Compile Include="GameJudge\Judge.cs" />
+    <Compile Include="GameJudge\BasicJudge.cs" />
+    <Compile Include="GameJudge\PatternJudge.cs" />
     <Compile Include="Players\ExceptionPlayer.cs" />
     <Compile Include="Players\IPlayer.cs" />
     <Compile Include="Players\NextAvailablePlayer.cs" />
     <Compile Include="Players\RandomPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\BoardHelper.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
