-Added PatternBoard to record pattern matches at each move

--- a/Source/GobangGameLib/GobangGameLib.csproj
+++ b/Source/GobangGameLib/GobangGameLib.csproj
@@ -41,6 +41,7 @@
     <Compile Include="GameBoard\Board.cs" />
     <Compile Include="GameBoard\BoardProperties.cs" />
     <Compile Include="GameBoard\IBoard.cs" />
+    <Compile Include="GameBoard\PatternBoard.cs" />
     <Compile Include="GameBoard\Patterns\IPatternGroup.cs" />
     <Compile Include="GameBoard\Patterns\IPattern.cs" />
     <Compile Include="GameBoard\Patterns\PatternFactory.cs" />
