-Added PatternRepositoryBase for both PatternRepository and MatchRepository
-Moved Match classes and PatternBoard classes under Patterns folder

--- a/Source/GobangGameLib/GobangGameLib.csproj
+++ b/Source/GobangGameLib/GobangGameLib.csproj
@@ -43,15 +43,17 @@
     <Compile Include="GameBoard\BoardProperties.cs" />
     <Compile Include="GameBoard\IBoard.cs" />
     <Compile Include="GameBoard\IBoardFactory.cs" />
-    <Compile Include="GameBoard\PatternBoard.cs" />
-    <Compile Include="GameBoard\PatternBoardFactory.cs" />
+    <Compile Include="GameBoard\Patterns\PatternBoard.cs" />
+    <Compile Include="GameBoard\Patterns\PatternBoardFactory.cs" />
     <Compile Include="GameBoard\Patterns\IPattern.cs" />
+    <Compile Include="GameBoard\Patterns\MatchRepository.cs" />
     <Compile Include="GameBoard\Patterns\PatternFactory.cs" />
     <Compile Include="GameBoard\Patterns\PatternRepository.cs" />
+    <Compile Include="GameBoard\Patterns\PatternRepositoryBase.cs" />
     <Compile Include="GameBoard\Patterns\PatternType.cs" />
-    <Compile Include="GameBoard\PieceConnection\IMatch.cs" />
-    <Compile Include="GameBoard\PieceConnection\Match.cs" />
-    <Compile Include="GameBoard\PieceConnection\PatternMatcher.cs" />
+    <Compile Include="GameBoard\Patterns\IMatch.cs" />
+    <Compile Include="GameBoard\Patterns\Match.cs" />
+    <Compile Include="GameBoard\Patterns\PatternMatcher.cs" />
     <Compile Include="GameBoard\Patterns\Pattern.cs" />
     <Compile Include="GameBoard\Position.cs" />
     <Compile Include="GameBoard\PositionManagement\IPositions.cs" />
