--- a/Source/AI/AI.csproj
+++ b/Source/AI/AI.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="AbPruningAi.cs" />
     <Compile Include="MinmaxSearchAi.cs" />
+    <Compile Include="Moves\EmptyPositionMoveEnumerator.cs" />
+    <Compile Include="Moves\IMoveEnumerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scorer\CenterScorer.cs" />
     <Compile Include="Scorer\IScorer.cs" />
