--- a/Source/AI/AI.csproj
+++ b/Source/AI/AI.csproj
@@ -45,6 +45,7 @@
     <Compile Include="MinmaxSearchAi.cs" />
     <Compile Include="Moves\EmptyPositionMoveEnumerator.cs" />
     <Compile Include="Moves\IMoveEnumerator.cs" />
+    <Compile Include="Moves\ScoredMoveEnumerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scorer\CenterScorer.cs" />
     <Compile Include="Scorer\IScorer.cs" />
