--- a/Source/AI/AI.csproj
+++ b/Source/AI/AI.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Moves\IMoveEnumerator.cs" />
     <Compile Include="Moves\ScoredMoveEnumerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scorer\AggregatedScorer.cs" />
     <Compile Include="Scorer\CenterScorer.cs" />
     <Compile Include="Scorer\IScorer.cs" />
     <Compile Include="Scorer\PatternScorer.cs" />
