--- a/Source/GoBangGameLibTest/GoBangGameLibTest.csproj
+++ b/Source/GoBangGameLibTest/GoBangGameLibTest.csproj
@@ -54,9 +54,10 @@
   <ItemGroup>
     <Compile Include="BoardTests\BoardGetWinnerTests.cs" />
     <Compile Include="BoardTests\BoardTests.cs" />
+    <Compile Include="Common\Utils.cs" />
     <Compile Include="ConnectionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\FreeLine.cs" />
+    <Compile Include="Common\FreeLine.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GobangGameLib\GobangGameLib.csproj">
