-Refactored AbPruningAi to fetch the detail moves of best move.
-Found the root cause of bug.
There is no half four detection. Opponent's open four will be blocked to a half four, which is no pattern for opponent. So opponent would rather to block my open three instead of to create its own open four.

Unit test of bug is disabled (keep on failing) until the half four pattern implemented, which should be in next pull requests.

--- a/Source/AI/AI.csproj
+++ b/Source/AI/AI.csproj
@@ -42,10 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbPruningAi.cs" />
+    <Compile Include="AiSearchResult.cs" />
     <Compile Include="MinmaxSearchAi.cs" />
     <Compile Include="Moves\EmptyPositionMoveEnumerator.cs" />
     <Compile Include="Moves\IMoveEnumerator.cs" />
     <Compile Include="Moves\ScoredMoveEnumerator.cs" />
+    <Compile Include="PlayerAndMove.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scorer\AggregatedScorer.cs" />
     <Compile Include="Scorer\CenterScorer.cs" />
