-Added HalfFour pattern -Fixed bug in test -Added one more Ai test

--- a/Source/GobangGameLib/GobangGameLib.csproj
+++ b/Source/GobangGameLib/GobangGameLib.csproj
@@ -43,6 +43,7 @@
     <Compile Include="GameBoard\BoardProperties.cs" />
     <Compile Include="GameBoard\IBoard.cs" />
     <Compile Include="GameBoard\IBoardFactory.cs" />
+    <Compile Include="GameBoard\Patterns\PatternPositionType.cs" />
     <Compile Include="GameBoard\Patterns\PatternBoard.cs" />
     <Compile Include="GameBoard\Patterns\PatternBoardFactory.cs" />
     <Compile Include="GameBoard\Patterns\IPattern.cs" />
