--- a/Source/GobangBenchMark/GobangBenchMark.csproj
+++ b/Source/GobangBenchMark/GobangBenchMark.csproj
@@ -85,7 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoardBenchMark.cs" />
+    <Compile Include="BoardEmptyPositionIterationBenchMark.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
