--- a/Source/GobangBenchMark/GobangBenchMark.csproj
+++ b/Source/GobangBenchMark/GobangBenchMark.csproj
@@ -88,6 +88,7 @@
     <Compile Include="BoardEmptyPositionIterationBenchMark.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\NaiveBoard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
