--- a/Source/GobangBenchMark/GobangBenchMark.csproj
+++ b/Source/GobangBenchMark/GobangBenchMark.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoardEmptyPositionIterationBenchMark.cs" />
+    <Compile Include="MinmaxSearchAiBenchMark.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\NaiveBoard.cs" />
@@ -103,6 +104,10 @@
     <ProjectReference Include="..\AI\AI.csproj">
       <Project>{413ea75d-b6f1-4d6e-9f90-2f0b3eff33f6}</Project>
       <Name>AI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GoBangGameLibTest\GoBangGameLibTest.csproj">
+      <Project>{C73DB1B4-CD2F-4CD8-9B9B-C960C26B193D}</Project>
+      <Name>GoBangGameLibTest</Name>
     </ProjectReference>
     <ProjectReference Include="..\GobangGameLib\GobangGameLib.csproj">
       <Project>{074097ec-ceba-4c50-b1c3-f59da2b9b457}</Project>
