--- a/Source/GobangBenchMark/GobangBenchMark.csproj
+++ b/Source/GobangBenchMark/GobangBenchMark.csproj
@@ -90,6 +90,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\NaiveBoard.cs" />
+    <Compile Include="Utilities\NaiveCenterScorer.cs" />
+    <Compile Include="Utilities\NaiveMinmaxSearchAi.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
