push old change

--- a/Source/GobangBenchMark/GobangBenchMark.csproj
+++ b/Source/GobangBenchMark/GobangBenchMark.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbPruningAiBenchMark.cs" />
     <Compile Include="BoardEmptyPositionIterationBenchMark.cs" />
     <Compile Include="MinmaxSearchAiBenchMark.cs" />
     <Compile Include="Program.cs" />
