--- a/Unity/NewWheel/VampireBuilder1/.vscode/settings.json
+++ b/Unity/NewWheel/VampireBuilder1/.vscode/settings.json
@@ -34,7 +34,7 @@
         "**/*.MA": true,
         "**/*.obj": true,
         "**/*.OBJ": true,
-        "**/*.asset": true,
+        // "**/*.asset": true,
         "**/*.cubemap": true,
         "**/*.flare": true,
         "**/*.mat": true,
