--- a/Unity/NewWheel/VampireBuilder1/.vscode/settings.json
+++ b/Unity/NewWheel/VampireBuilder1/.vscode/settings.json
@@ -34,13 +34,10 @@
         "**/*.MA": true,
         "**/*.obj": true,
         "**/*.OBJ": true,
-        // "**/*.asset": true,
         "**/*.cubemap": true,
         "**/*.flare": true,
         "**/*.mat": true,
         "**/*.meta": true,
-        // "**/*.prefab": true,
-        // "**/*.unity": true,
         "build/": true,
         "Build/": true,
         "Library/": true,
@@ -50,5 +47,7 @@
         "ProjectSettings/": true,
         "temp/": true,
         "Temp/": true
-    }
+    },
+    "diffEditor.codeLens": true,
+    "dotnet.defaultSolution": "VampireBuilder1.sln"
 }
