Weapons can upgrade

--- a/Unity/NewWheel/Brock/.vscode/settings.json
+++ b/Unity/NewWheel/Brock/.vscode/settings.json
@@ -56,5 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Brock.sln"
+    "dotnet.defaultSolution": "Brock.sln",
+    "dotnet.projects.enableFileBasedPrograms": false
 }
